--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>wHost</title>
     <link rel="shortcut icon" href="favicon.png">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
     <main>
-        <section>
+        <section id="product-overview">
             <h1>Get the freedom you deserve.</h1>
         </section>
-        <section>
-            <h1>Choose Your Plan</h1>
+        <section id="plans">
+            <h1 class="section-title">Choose Your Plan</h1>
+            <p>Make sure you get the most of your money!</p>
         </section>
     </main>
 </body>
